--- a/relatorio_diario_manutencao-main-main/index.html
+++ b/relatorio_diario_manutencao-main-main/index.html
@@ -899,7 +899,7 @@
             // Adicionar tabela com estilos responsivos
             doc.autoTable({
                 startY: yPosition + 15,
-                head: [['Horário', 'Técnico', 'Equipamento', 'Tipo', 'Descrição', 'Pendência']],
+                head: [['Horário', 'Equipe', 'Equipamento', 'Tipo', 'Descrição', 'Pendência']],
                 body: tableData,
                 margin: { left: margin, right: margin },
                 styles: { fontSize: 8, cellPadding: 2, overflow: 'linebreak' },
